--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-navigation": "^3.12.1",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
