search now works

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'dropIn2' do
 
 
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'dropIn2Tests' do
     inherit! :search_paths
     # Pods for testing
