--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.12.1",
+    "react-navigation-tabs": "^2.4.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
   },
