--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,7 +27,7 @@ target 'dropIn2' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
 
 
